# gcc1919-agenda

./: Cargo.toml  README.md
src/: database.rs  main.rs
src/dao/: appointments_dao.rs  contacts_dao.rs  mod.rs
src/models/: appointments.rs  contacts.rs  mod.rs
src/services/: appointments.rs  contacts.rs  database.rs  mod.rs
src/utils/: clear.rs  input.rs  mod.rs  pprint.rs  validators.rs
